Add env file to drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -36,6 +36,7 @@ steps:
       namespace: skunkworks
       release: skunkworks-parsley-ai-agent-skunkworks
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/skunkworks/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=parsley-ai-agent-skunkworks.skunkworks.staging.corp.mongodb.com
+      values_files: [ "environments/staging.yaml" ]
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
