--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,7 @@ steps:
       chart_version: 4.24.2
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devprod-evergreen
-      release: devprod-evergreen-parsley-ai-agent-devprod-evergreen
+      release: parsley-ai-agent
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=parsley-ai-agent.devprod-evergreen.staging.corp.mongodb.com
       values_files: [ "environments/staging.yaml" ]
       api_server: https://api.staging.corp.mongodb.com
