--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "sage",
   "version": "1.0.0",
   "description": "evergreen-ai-service",
-  "main": "dist/server.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "node dist/main.js",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "clean": "rm -rf dist",
     "eslint:fix": "yarn eslint:strict --fix",
     "eslint:staged": "STRICT=1 eslint",
@@ -34,6 +34,7 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.36.0"
   },
