--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
   },
   "dependencies": {
     "dotenv": "^17.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-winston": "^4.2.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
     "@types/express": "^4.17.17",
+    "@types/express-winston": "^4.0.2",
     "@types/node": "^20.5.0",
+    "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
