--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "evergreen-ai-service",
   "main": "dist/main.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/main.js",
+    "build": "tsc && tsc-alias",
+    "start": "NODE_ENV=production node dist/main.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "clean": "rm -rf dist",
     "eslint:fix": "yarn eslint:strict --fix",
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
+    "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
@@ -41,6 +42,7 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.36.0"
