--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -9,6 +9,8 @@ pre:
   - func: get-project
   - func: setup-node
   - func: yarn-install
+  - func: yarn-start
+  - func: yarn-start-and-kill
 
 post:
   - func: assume-ec2-role
@@ -33,6 +35,7 @@ tasks:
   - name: compile
     commands:
       - func: yarn-build
+      - func: yarn-start-and-kill
   - name: lint
     commands:
       - func: yarn-lint
@@ -132,3 +135,24 @@ functions:
       script: |
         ${PREPARE_SHELL}
         yarn eslint:strict
+
+  yarn-start:
+    command: shell.exec
+    params:
+      working_dir: sage
+      shell: bash
+      script: |
+        ${PREPARE_SHELL}
+        yarn start
+
+  yarn-start-and-kill:
+    command: shell.exec
+    params:
+      working_dir: sage
+      shell: bash
+      script: |
+        ${PREPARE_SHELL}
+        yarn start &
+        SERVER_PID=$!
+        sleep 5
+        kill $SERVER_PID
