--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "eslint:staged": "STRICT=1 eslint",
     "eslint:strict": "STRICT=1 eslint .",
     "format": "prettier --write src/**/*.ts",
-    "format:check": "prettier --check src/**/*.ts"
+    "format:check": "prettier --check src/**/*.ts",
+    "mastra:dev": "mastra dev"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.24",
+    "@ai-sdk/openai": "^1.3.23",
+    "@mastra/core": "^0.10.15",
+    "@mastra/libsql": "^0.11.0",
+    "@mastra/loggers": "^0.10.3",
+    "@mastra/memory": "^0.11.3",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
+    "mastra": "^0.10.13",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
