DEVPROD-19777 Install vitest (#22)

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -28,6 +28,7 @@ buildvariants:
     tasks:
       - name: compile
       - name: lint
+      - name: test
 
 tasks:
   - name: compile
@@ -37,6 +38,9 @@ tasks:
   - name: lint
     commands:
       - func: yarn-lint
+  - name: test
+    commands:
+      - func: yarn-test
 
 
 
@@ -151,3 +155,12 @@ functions:
       script: |
         ${PREPARE_SHELL}
         ./scripts/health-check.sh
+      
+  yarn-test:
+    command: shell.exec
+    params:
+      working_dir: sage
+      shell: bash
+      script: |
+        ${PREPARE_SHELL}
+        yarn test
