Add kanopy secrets

--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -23,6 +23,7 @@ env:
   EVERGREEN_API_URL: https://evergreen.mongodb.com/rest/v2
   EVERGREEN_URL: https://evergreen.mongodb.com
   OPENAI_ENDPOINT: "https://parsley-ai.openai.azure.com/"
+  AZURE_OPENAI_API_VERSION: 2024-02-15-preview
   PORT: 8080
 
 envSecrets:
@@ -31,3 +32,5 @@ envSecrets:
   MONGO_PASSWORD: parsley-ai-secrets
   OPENAI_KEY: parsley-ai-secrets
   EVERGREEN_API_KEY: parsley-ai-secrets
+  AZURE_OPENAI_API_KEY: parsley-ai-secrets
+  AZURE_OPENAI_ENDPOINT: parsley-ai-secrets
