--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/express-winston": "^4.0.2",
     "@types/node": "^20.5.0",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "@vitest/coverage-v8": "^3.2.4",
@@ -57,6 +58,7 @@
     "globals": "^16.3.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
