--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && tsc-alias",
     "start": "NODE_ENV=production node dist/main.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist bin node_modules",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -16,13 +16,23 @@
     "eslint:staged": "STRICT=1 eslint",
     "eslint:strict": "STRICT=1 eslint .",
     "format": "prettier --write src/**/*.ts",
-    "format:check": "prettier --check src/**/*.ts"
+    "format:check": "prettier --check src/**/*.ts",
+    "mastra:dev": "mastra dev",
+    "mastra:build": "mastra build"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.24",
+    "@ai-sdk/openai": "^1.3.23",
+    "@mastra/core": "^0.10.15",
+    "@mastra/libsql": "^0.11.0",
+    "@mastra/loggers": "^0.10.3",
+    "@mastra/memory": "^0.11.3",
+    "ai": "^4.3.19",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
+    "mastra": "^0.10.13",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
@@ -33,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/express-winston": "^4.0.2",
     "@types/node": "^20.5.0",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "@vitest/coverage-v8": "^3.2.4",
@@ -47,6 +58,7 @@
     "globals": "^16.3.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
