--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -34,7 +33,8 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    ".mastra"
   ],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
