--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "NODE_ENV=production node dist/main.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "clean": "rm -rf dist bin node_modules",
+    "codegen": "graphql-codegen-esm --config graphql.config.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -32,6 +33,8 @@
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
+    "gql": "^1.1.2",
+    "graphql": "^16.11.0",
     "mastra": "^0.10.13",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
+    "@graphql-codegen/cli": "^5.0.7",
     "@types/express": "^4.17.17",
     "@types/express-winston": "^4.0.2",
     "@types/node": "^20.5.0",
@@ -62,7 +66,7 @@
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0",
     "vitest": "^3.2.4"
   },
