--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "baseUrl": "src",
     "strict": true,
     "esModuleInterop": true,
@@ -29,12 +29,14 @@
     }
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "graphql.config.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
-    ".mastra"
+    ".mastra",
+    "graphql.config.ts"
   ],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
