--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "eslint:strict": "STRICT=1 eslint .",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
-    "mastra:dev": "mastra dev",
-    "mastra:build": "mastra build"
+    "mastra:dev": "IS_MASTRA=true mastra dev",
+    "mastra:build": "IS_MASTRA=true mastra build"
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.3.24",
