--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
     "@mastra/loggers": "^0.10.3",
     "@mastra/memory": "^0.11.3",
     "ai": "^4.3.19",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.0",
+    "@opentelemetry/core": "^2.0.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
