--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -35,6 +35,7 @@ env:
   OTEL_SERVICE_NAME: sage-ai-service
   OTEL_ENABLED: true
   OTEL_EXPORTER_OTLP_ENDPOINT: otel-collector.staging.corp.mongodb.com:443/v1/traces
+  OTEL_EXPORTER_OTLP_INSECURE: true
   LOG_LEVEL: debug
 
 envSecrets:
