--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -32,6 +32,8 @@ env:
   EVERGREEN_URL: https://evergreen.mongodb.com
   AZURE_OPENAI_API_VERSION: 2024-02-15-preview
   PORT: 8080
+  LOG_LEVEL: debug
+
 
 envSecrets:
   AZURE_OPENAI_API_KEY: parsley-ai-secrets
