--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
     "ai": "^4.3.19",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
