--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -6,8 +6,8 @@ ingress:
     - sage.devprod-evergreen.staging.corp.mongodb.com
 service:
   targetPort: 8080
-mesh:
-  enabled: true
+#mesh:
+#  enabled: true
   
 services:
   - name: http
