--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
     "mastra": "^0.10.13",
+    "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
