--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint:strict": "STRICT=1 eslint .",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
-    "mastra:dev": "mastra dev",
+    "mastra:dev": "mastra dev -p 4111",
     "mastra:build": "mastra build"
   },
   "dependencies": {
