--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -6,9 +6,12 @@ ingress:
     - sage.devprod-evergreen.staging.corp.mongodb.com
 service:
   targetPort: 8080
-#mesh:
-#  enabled: true
-  
+mesh:
+  enabled: true
+
+labels:
+  app: sage
+
 services:
   - name: http
     ingress: true
