--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -32,6 +32,7 @@ buildvariants:
       mongodb_url_2204: https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu2204-8.0.4.tgz
       mongosh_url_2204: https://downloads.mongodb.com/compass/mongosh-2.3.1-linux-x64.tgz
       node_version: 22.14.0
+      goroot: /opt/golang/go1.24
     modules:
       - evergreen
     tasks:
@@ -53,7 +54,7 @@ tasks:
   - name: e2e
     commands:
       - func: setup-mongodb
-      - func: generate-token
+      # - func: generate-token
       - func: run-make-background
         vars:
           target: local-evergreen
@@ -206,14 +207,14 @@ functions:
       working_dir: sage
       shell: bash
       script: |
-        ln -s ${workdir}/sage/evergreen/graphql/schema ${app_dir}/sdlschema
+        ln -s ${workdir}/evergreen/graphql/schema ${workdir}/sdlschema
 
   wait-for-evergreen:
     command: shell.exec
     type: setup
     params:
       exec_timeout_secs: 600
-      working_dir: sage/.evergreen
+      working_dir: sage
       script: ./scripts/wait-for-evergreen.sh
 
   yarn-build:
