--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -42,3 +42,19 @@ envSecrets:
   MONGO_PASSWORD: parsley-ai-secrets
   MONGO_URL: parsley-ai-secrets
   MONGO_USERNAME: parsley-ai-secrets
+
+serviceAccount:
+  enabled: true
+  serviceEntitlementRequests:
+   - name: sage-web-app-to-devprod-platform-otel-collector-web-app
+     serviceCatalogEntryRef:
+       name: otel-collector-web-app
+       namespace: devprod-platform
+     requestedPaths:
+     - methods:
+       - POST
+       paths:
+       - /v1/traces
+       - /opentelemetry.proto.collector.trace.v1.TraceService/Export
+       - /opentelemetry.proto.collector.logs.v1.LogsService/Export
+       - /opentelemetry.proto.collector.metrics.v1.MetricsService/Export
