--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.38.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "engines": {
