--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
-    "e2e": "vitest run src/e2e",
+    "e2e": "E2E=true yarn test",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage",
+    "test:ui": "yarn test --ui",
+    "test:run": "yarn test run",
+    "test:coverage": "yarn test --coverage",
     "eslint:fix": "yarn eslint:strict --fix",
     "eslint:staged": "STRICT=1 eslint",
     "eslint:strict": "STRICT=1 eslint .",
