--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -8,7 +8,7 @@ service:
   targetPort: 8080
 mesh:
   enabled: true
-  
+
 services:
   - name: http
     ingress: true
@@ -32,6 +32,9 @@ env:
   EVERGREEN_URL: https://evergreen.mongodb.com
   AZURE_OPENAI_API_VERSION: 2024-02-15-preview
   PORT: 8080
+  OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
+  DEPLOYMENT_ENV: staging
+
 
 envSecrets:
   AZURE_OPENAI_API_KEY: parsley-ai-secrets
@@ -40,3 +43,19 @@ envSecrets:
   MONGO_PASSWORD: parsley-ai-secrets
   MONGO_URL: parsley-ai-secrets
   MONGO_USERNAME: parsley-ai-secrets
+
+serviceAccount:
+  enabled: true
+  serviceEntitlementRequests:
+   - name: sage-web-app-to-devprod-platform-otel-collector-web-app
+     serviceCatalogEntryRef:
+       name: otel-collector-web-app
+       namespace: devprod-platform
+     requestedPaths:
+     - methods:
+       - POST
+       paths:
+       - /v1/traces
+       - /opentelemetry.proto.collector.trace.v1.TraceService/Export
+       - /opentelemetry.proto.collector.logs.v1.LogsService/Export
+       - /opentelemetry.proto.collector.metrics.v1.MetricsService/Export
