--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage",
+    "e2e": "vitest --project e2e",
+    "test": "vitest --project unit",
+    "test:ui": "yarn test --ui",
+    "test:run": "yarn test run",
+    "test:coverage": "yarn test --coverage",
     "eslint:fix": "yarn eslint:strict --fix",
     "eslint:staged": "STRICT=1 eslint",
     "eslint:strict": "STRICT=1 eslint .",
@@ -73,6 +74,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.38.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "engines": {
