--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "eslint:strict": "STRICT=1 eslint .",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
-    "mastra:dev": "mastra dev",
+    "mastra:dev": "mastra dev -p 4111",
     "mastra:build": "mastra build"
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.3.24",
     "@ai-sdk/openai": "^1.3.23",
-    "@mastra/core": "^0.10.15",
-    "@mastra/libsql": "^0.11.0",
-    "@mastra/loggers": "^0.10.3",
-    "@mastra/memory": "^0.11.3",
+    "@mastra/core": "^0.11.1",
+    "@mastra/libsql": "^0.11.2",
+    "@mastra/loggers": "^0.10.4",
+    "@mastra/memory": "^0.11.5",
+    "@mastra/mongodb": "^0.12.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
@@ -41,7 +42,8 @@
     "express-winston": "^4.2.0",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
-    "mastra": "^0.10.13",
+    "mastra": "^0.10.15",
+    "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
