--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
     "ai": "^4.3.19",
+    "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
@@ -52,6 +53,7 @@
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
     "@graphql-codegen/cli": "^5.0.7",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
     "@types/express-winston": "^4.0.2",
     "@types/node": "^20.5.0",
