--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
     "mastra:dev": "mastra dev -p 4111",
-    "mastra:build": "mastra build"
+    "mastra:build": "mastra build",
+    "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
+    "mastra:full": "yarn mastra:build && yarn mastra:start"
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.3.24",
@@ -36,6 +38,7 @@
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
     "ai": "^4.3.19",
+    "braintrust": "^0.2.1",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
