Revert "DEVPROD-20765: Upgrade AI SDK to v5 (#36)"
This reverts commit 2706a0b5

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -264,6 +264,7 @@ functions:
     command: shell.exec
     params:
       env:
+        AZURE_OPENAI_API_VERSION: ${AZURE_OPENAI_API_VERSION}
         AZURE_OPENAI_API_KEY: ${AZURE_OPENAI_API_KEY}
         AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
       working_dir: sage
