--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -31,6 +31,7 @@ env:
   EVERGREEN_API_URL: https://evergreen-staging.corp.mongodb.com/rest/v2
   EVERGREEN_URL: https://evergreen-staging.corp.mongodb.com
   EVERGREEN_GRAPHQL_ENDPOINT: https://evergreen-staging.corp.mongodb.com/mcp/graphql/query
+  AZURE_OPENAI_API_VERSION: 2024-02-15-preview
   PORT: 8080
   OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
   DEPLOYMENT_ENV: staging
