--- a/package.json
+++ b/package.json
@@ -25,20 +25,19 @@
     "mastra:full": "yarn mastra:build && yarn mastra:start"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^2.0.10",
-    "@ai-sdk/openai": "^2.0.10",
-    "@ai-sdk/provider": "^2.0.0",
-    "@mastra/core": "^0.0.0-ai-v5-20250801192614",
+    "@ai-sdk/azure": "^1.3.24",
+    "@ai-sdk/openai": "^1.3.23",
+    "@mastra/core": "^0.11.1",
     "@mastra/libsql": "^0.11.2",
     "@mastra/loggers": "^0.10.4",
-    "@mastra/memory": "^0.0.0-ai-v5-20250801192614",
+    "@mastra/memory": "^0.11.5",
     "@mastra/mongodb": "^0.12.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
-    "ai": "^5.0.10",
+    "ai": "^4.3.19",
     "braintrust": "^0.2.1",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
@@ -46,7 +45,7 @@
     "express-winston": "^4.2.0",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
-    "mastra": "^0.0.0-ai-v5-20250801192614",
+    "mastra": "^0.10.15",
     "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
