--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@opentelemetry/sdk-trace-base": "^2.0.1",
     "ai": "^5.0.10",
     "braintrust": "^0.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
@@ -56,6 +57,7 @@
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
     "@graphql-codegen/cli": "^5.0.7",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
     "@types/express-winston": "^4.0.2",
     "@types/node": "^20.5.0",
