--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-winston": "^4.2.0",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
+    "jose": "^6.0.12",
     "mastra": "^0.0.0-ai-v5-20250801192614",
     "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
