--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc && tsc-alias",
     "start": "NODE_ENV=production node dist/main.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
+    "dev:staging": "NODE_ENV=staging ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
     "e2e": "vitest --project e2e",
@@ -40,7 +41,7 @@
     "@opentelemetry/sdk-trace-base": "^2.0.1",
     "ai": "^5.0.10",
     "braintrust": "^0.2.1",
-    "dotenv": "^17.1.0",
+    "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
