--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "@ai-sdk/azure": "^2.0.10",
     "@ai-sdk/openai": "^2.0.10",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/core": "^0.0.0-ai-v5-20250801192614",
-    "@mastra/libsql": "^0.11.2",
-    "@mastra/loggers": "^0.10.4",
-    "@mastra/memory": "^0.0.0-ai-v5-20250801192614",
-    "@mastra/mongodb": "^0.12.2",
+    "@mastra/core": "^0.13.2",
+    "@mastra/libsql": "^0.13.2",
+    "@mastra/loggers": "^0.10.6",
+    "@mastra/memory": "^0.12.2",
+    "@mastra/mongodb": "^0.13.1",
+    "@mastra/rag": "^1.0.8",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
-    "ai": "^5.0.10",
     "braintrust": "^0.2.1",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
@@ -46,7 +46,6 @@
     "express-winston": "^4.2.0",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
-    "mastra": "^0.0.0-ai-v5-20250801192614",
     "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
