--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
+    "gpt-tokenizer": "^3.0.1",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
     "mongodb": "^6.18.0",
