--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,6 @@
+# Server Configuration
+DEPLOYMENT_ENV=local
+
 # Evergreen Configuration
 EVERGREEN_API_URL=localhost:9090/rest/v2
 EVERGREEN_URL=localhost:9090
