--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,7 @@ build/
 
 # Environment variables
 .env
-.env.local
-.env.development.local
+.env.staging.local
 .env.test.local
 .env.production.local
 
