--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -28,15 +28,14 @@ resources:
 
 env:
   EVERGREEN_API_USER: sage
-  EVERGREEN_API_URL: https://evergreen-staging.corp.mongodb.com/rest/v2
-  EVERGREEN_URL: https://evergreen-staging.corp.mongodb.com
-  EVERGREEN_GRAPHQL_ENDPOINT: https://evergreen-staging.corp.mongodb.com/mcp/graphql/query
+  EVERGREEN_API_URL: https://evergreen.mongodb.com/rest/v2
+  EVERGREEN_URL: https://evergreen.mongodb.com
+  EVERGREEN_GRAPHQL_ENDPOINT: https://evergreen.mongodb.com/mcp/graphql/query
   PORT: 8080
   OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
   DEPLOYMENT_ENV: staging
   DB_NAME: sage
   OTEL_EXPORTER_OTLP_ENDPOINT: https://api.braintrust.dev/otel
-  LOG_LEVEL: debug
 
 
 envSecrets:
