--- a/.env.local
+++ b/.env.local
@@ -2,9 +2,9 @@
 DEPLOYMENT_ENV=local
 
 # Evergreen Configuration
-EVERGREEN_API_URL=localhost:9090/rest/v2
-EVERGREEN_URL=localhost:9090
-EVERGREEN_GRAPHQL_ENDPOINT=localhost:9090/mcp/graphql/query
+EVERGREEN_API_URL=http://localhost:9090/rest/v2
+EVERGREEN_URL=http://localhost:9090
+EVERGREEN_GRAPHQL_ENDPOINT=http://localhost:9090/mcp/graphql/query
 END_USER_HEADER_ID=sage
 EVERGREEN_API_USER=sage
 EVERGREEN_API_KEY=mysecret
