Add honeycomb team for sage

--- a/.env.local
+++ b/.env.local
@@ -8,3 +8,6 @@ EVERGREEN_GRAPHQL_ENDPOINT=http://localhost:9090/mcp/graphql/query
 END_USER_HEADER_ID=sage
 EVERGREEN_API_USER=sage
 EVERGREEN_API_KEY=mysecret
+
+# Honeycomb
+HONEYCOMB_TEAM=sage
