--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "mastra:full": "yarn mastra:build && yarn mastra:start"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^2.0.10",
-    "@ai-sdk/openai": "^2.0.10",
-    "@ai-sdk/provider": "^2.0.0",
+    "@ai-sdk/azure": "1.3.25",
+    "@ai-sdk/openai": "1.3.24",
+    "@ai-sdk/provider": "1.1.3",
     "@mastra/core": "^0.13.2",
     "@mastra/libsql": "^0.13.2",
     "@mastra/loggers": "^0.10.6",
@@ -39,6 +39,7 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "ai": "4.3.19",
     "braintrust": "^0.2.1",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
