--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "mastra:full": "yarn mastra:build && yarn mastra:start"
   },
   "dependencies": {
-    "@ai-sdk/azure": "1.3.25",
-    "@ai-sdk/openai": "1.3.24",
-    "@ai-sdk/provider": "1.1.3",
-    "@mastra/core": "^0.13.2",
+    "@ai-sdk/azure": "^2.0.18",
+    "@ai-sdk/openai": "^2.0.18",
+    "@ai-sdk/provider": "^2.0.0",
+    "@mastra/core": "0.0.0-ai-v5-20250801192614",
     "@mastra/libsql": "^0.13.2",
     "@mastra/loggers": "^0.10.6",
-    "@mastra/memory": "^0.12.2",
+    "@mastra/memory": "0.0.0-ai-v5-20250801192614",
     "@mastra/mongodb": "^0.13.1",
     "@mastra/rag": "^1.0.8",
     "@opentelemetry/api": "^1.9.0",
@@ -39,15 +39,16 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
-    "ai": "4.3.19",
+    "ai": "^5.0.20",
     "braintrust": "^0.2.1",
-    "dotenv": "^17.1.0",
+    "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
     "gpt-tokenizer": "^3.0.1",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
+    "mastra": "0.0.0-ai-v5-20250801192614",
     "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
