--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mastra/loggers": "^0.10.4",
     "@mastra/memory": "^0.0.0-ai-v5-20250801192614",
     "@mastra/mongodb": "^0.12.2",
+    "@mastra/rag": "^1.1.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
@@ -46,6 +47,7 @@
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
+    "gpt-tokenizer": "^3.0.1",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
     "mastra": "^0.0.0-ai-v5-20250801192614",
