--- a/.env.local
+++ b/.env.local
@@ -8,4 +8,4 @@ EVERGREEN_GRAPHQL_ENDPOINT=http://localhost:9090/mcp/graphql/query
 END_USER_HEADER_ID=sage
 EVERGREEN_API_USER=sage
 EVERGREEN_API_KEY=mysecret
-USER_NAME=admin
+USER_NAME=regular
