--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@ai-sdk/azure": "^2.0.10",
     "@ai-sdk/openai": "^2.0.10",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/core": "^0.0.0-ai-v5-20250813235735",
+    "@mastra/core": "0.0.0-ai-v5-20250801192614",
     "@mastra/libsql": "^0.11.2",
     "@mastra/loggers": "^0.10.4",
-    "@mastra/memory": "^0.0.0-ai-v5-20250813235735",
+    "@mastra/memory": "0.0.0-ai-v5-20250801192614",
     "@mastra/mongodb": "^0.12.2",
     "@mastra/rag": "^1.1.0",
     "@opentelemetry/api": "^1.9.0",
@@ -42,7 +42,7 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
-    "ai": "^5.0.15",
+    "ai": "^5.0.10",
     "braintrust": "^0.2.1",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
@@ -52,7 +52,7 @@
     "gpt-tokenizer": "^3.0.1",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
-    "mastra": "^0.0.0-ai-v5-20250813235735",
+    "mastra": "0.0.0-ai-v5-20250801192614",
     "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
