--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "exactOptionalPropertyTypes": true,
     "types": ["vitest/globals"],
     "paths": {
-      "src/*": ["./src/*"]
+      "src/*": ["./src/*"],
     }
   },
   "include": [
