--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -49,16 +49,16 @@ envSecrets:
 
 serviceAccount:
   enabled: true
-#  serviceEntitlementRequests:
-#   - name: sage-web-app-to-devprod-platform-otel-collector-web-app
-#     serviceCatalogEntryRef:
-#       name: otel-collector-web-app
-#       namespace: devprod-platform
-#     requestedPaths:
-#     - methods:
-#       - POST
-#       paths:
-#       - /v1/traces
-#       - /opentelemetry.proto.collector.trace.v1.TraceService/Export
-#       - /opentelemetry.proto.collector.logs.v1.LogsService/Export
-#       - /opentelemetry.proto.collector.metrics.v1.MetricsService/Export
+  serviceEntitlementRequests:
+   - name: sage-web-app-to-devprod-platform-otel-collector-web-app
+     serviceCatalogEntryRef:
+       name: otel-collector-web-app
+       namespace: devprod-platform
+     requestedPaths:
+     - methods:
+       - POST
+       paths:
+       - /v1/traces
+       - /opentelemetry.proto.collector.trace.v1.TraceService/Export
+       - /opentelemetry.proto.collector.logs.v1.LogsService/Export
+       - /opentelemetry.proto.collector.metrics.v1.MetricsService/Export
