--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
     "@opentelemetry/core": "^2.0.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.204.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/sdk-logs": "^0.204.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "@opentelemetry/winston-transport": "^0.14.1",
     "@sentry/node": "^10.5.0",
     "@sentry/profiling-node": "^10.5.0",
     "ai": "^5.0.15",
@@ -94,8 +97,8 @@
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.5",
     "junit-report-builder": "^5.1.1",
+    "lint-staged": "^16.1.5",
     "mastra": "^0.10.23",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
